--- a/views/pages/mapa.pug
+++ b/views/pages/mapa.pug
@@ -5,10 +5,81 @@ html(lang="es")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width,initial-scale=1.0")
         link(rel="stylesheet", href="../css/bootstrap.min.css")
+        link(rel="stylesheet", href="../css/map.css")
         title #{nombrePagina}
     body
-        nav(class="navbar navbar-dark bg-dark")
+        nav(class="navbar navbar-danger bg-danger mb-4")
             div(class="container-fluid")
-                a(class="navbar-brand", href="#") Mapa
-        
-    
+                a(class="navbar-brand", href="#", style="color:white") Portal de Usuarios
+        div(class="container")
+            div(class="row")
+                div(class="col-lg-4 col-md-12 col-sm-12")
+                    h3 Registro de usuarios
+                    hr
+                    div(style="border-style:groove; padding:1em")
+                        form(method="POST", action="/mapa")
+                            div(class="row mb-1")
+                                div(class="col")
+                                    div(class="form-outline")
+                                        input(type="text", id="name", name="name", class="form-control", placeholder="Nombre")
+                                        label(class="form-label", for="name")
+                                div(class="col")
+                                    div(class="form-outline")
+                                        input(type="email", id="email", name="email", class="form-control", placeholder="Email")
+                                        label(class="form-label", for="email")
+                            div(class="form-outline mb-1")
+                                input(type="text", id="direction", name="direction", placeholder="Dirección", class="form-control")
+                                label(class="form-label")
+                            div(class="row mb-1")
+                                div(class="col")
+                                    div(class="form-outline")
+                                        input(type="text", id="street", name="street", class="form-control" ,placeholder="Ciudad")
+                                        label(for="street", class="form-label")
+                                div(class="col")
+                                    div(class="form-outline")
+                                        input(type="text", id="suite", name="suite" ,class="form-control", placeholder="suite")
+                                        label(for="suite", class="form-label")
+                            div(class="row mb-1")
+                                div(class="col")
+                                    div(class="form-outline")
+                                        input(type="text", name="longitude", placeholder="Longitude", class="form-control")
+                                        label(for="longitude", class="form-label")
+                                div(class="col")
+                                    div(class="form-outline")
+                                        input(type="text", name="latitude", placeholder="Latitude", class="form-control")
+                                        label(for="latitude" ,class="form-label")
+                            button(type="submit", class="btn btn-primary mb-4") Registrar
+
+                div(class="col-lg-8 col-md-12 col-sm-12")
+                    h4 Ultimos usuarios registrados
+                    hr
+                    if dataset.length
+                        div(class="table-responsive", style="height:500px")
+                            table(class="table table-bordered table-striped align-middle")
+                                thead
+                                    tr
+                                        th(scope="col") Nombre
+                                        th(scope="col") Email
+                                        th(scope="col") ciudad
+                                        th(scope="col") direccion
+                                        th(scope="col") suite
+                                        th(scope="col") longitude
+                                        th(scope="col") latitude
+                                        th(scope="col") action
+                                tbody
+                                    each row in dataset
+                                        tr
+                                            th(scope="row") #{row.name}
+                                            td #{row.email}
+                                            td #{row.street}
+                                            td #{row.suite}
+                                            td #{row.city}
+                                            td #{row.latitude}
+                                            td #{row.longitude}
+                                            td
+                                                div(class="btn-group")
+                                                    button(type="submit", class="btn btn-info") localizar
+                                                    button(type="submit", class="btn btn-info") eliminar
+            div(class="row")
+                div(class="col-lg-12 col-md-12 col-sm-12 mt-2")
+                    p Lorem ipsum dolor sit amet.
